--- a/goit/javascript/lesson_21-22/public/index.html
+++ b/goit/javascript/lesson_21-22/public/index.html
@@ -5,8 +5,8 @@
     <title>Lesson 21-22</title>
     <link rel="stylesheet" href="css/modal.css">
     <script src="../../lib/tmpl.js"></script>
-    <script src="js/GoItTest.js"></script>
-    <script src="js/index.js"></script>
+    <script src="build/js/GoItTest.js"></script>
+    <script src="build/js/index.js"></script>
 </head>
 <body>
 <div>
