--- a/goit/javascript/lesson_11-12/public/index2.html
+++ b/goit/javascript/lesson_11-12/public/index2.html
@@ -3,29 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Lesson 10-11</title>
-    <link rel="stylesheet" href="./css/carousel/carousel.css">
+    <link rel="stylesheet" href="../../../html/lesson_01/public/css/style.css">
     <script src="https://cdn.jsdelivr.net/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/lodash/3.10.1/lodash.min.js"></script>
-    <script src="./js/lib/jquery.carousel.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="../../lib/tmpl.js"></script>
+    <script src="./js/index2.js"></script>
 </head>
 <body>
-
-    <div class="carousel clearfix">
-        <div class="carousel-arrow-left"><span>Влево</span></div>
-        <div class="carousel-hider">
-            <ul class="carousel-list">
-                <li class="carousel-element"><img src="./img/carousel/img1.jpg"><p>Описание 1</p></li>
-                <li class="carousel-element"><img src="./img/carousel/img2.jpg"><p>Описание 2</p></li>
-                <li class="carousel-element"><img src="./img/carousel/img3.jpg"><p>Описание 3</p></li>
-                <li class="carousel-element"><img src="./img/carousel/img4.jpg"><p>Описание 4</p></li>
-                <li class="carousel-element"><img src="./img/carousel/img5.jpg"><p>Описание 5</p></li>
-                <li class="carousel-element"><img src="./img/carousel/img6.jpg"><p>Описание 6</p></li>
-            </ul>
-        </div>
-        <div class="carousel-arrow-right"><span>Вправо</span></div>
-    </div>
-
     <div id="profile"></div>
 
     <script type="text/x-tmpl" id="tProfile">
