--- a/goit/javascript/lesson_15-16/public/index.html
+++ b/goit/javascript/lesson_15-16/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <link rel="stylesheet" href="../public/css/global.css">
     <script src="https://cdn.jsdelivr.net/jquery/2.2.0/jquery.min.js"></script>
-    <script src="../public/js/global.js"></script>
+    <script src="../public/js/google-q.js"></script>
 </head>
 <body>
 
