--- a/goit/javascript/lesson_9-10/public/index.html
+++ b/goit/javascript/lesson_9-10/public/index.html
@@ -6,13 +6,16 @@
     <link rel="stylesheet" href="./css/global.css">
     <link rel="stylesheet" href="./css/carousel.css">
     <link rel="stylesheet" href="./css/customSelect.css">
-    <link rel="stylesheet" href="./css/jquery.menu.css">
+    <link rel="stylesheet" href="./css/menu.css">
+    <link rel="stylesheet" href="./css/prettyCheckable.css">
+
     <script src="./js/lib/jquery.min.js"></script>
     <script src="./js/lib/jquery.jcarousel.min.js"></script>
     <script src="./js/lib/jquery.customSelect.latest.min.js"></script>
+    <script src="./js/lib/prettyCheckable.min.js"></script>
     <script src="./js/carousel.js"></script>
-    <script src="./js/customSelect.js"></script>
-    <script src="./js/jquery.menu.js"></script>
+    <script src="./js/customElements.js"></script>
+    <script src="./js/global.js"></script>
 </head>
 <body>
     <nav class="nav-menu">
@@ -27,21 +30,7 @@
                     <li><a href="#">Nav 3.3</a></li>
                     <li>
                         <a href="#">Nav 3.4</a>
-                        <!--<ul class="sub-menu">
-                            <li><a href="#">Nav 3.4.1</a></li>
-                            <li class="dropdown"><a href="#">Nav 3.4.2</a>
-                                <ul class="sub-menu">
-                                    <li><a href="#">Nav 3.4.2.1</a></li>
-                                    <li><a href="#">Nav 3.4.2.2</a></li>
-                                    <li><a href="#">Nav 3.4.2.3</a></li>
-                                    <li><a href="#">Nav 3.4.2.4</a></li>
-                                    <li><a href="#">Nav 3.4.2.5</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Nav 3.4.3</a></li>
-                            <li><a href="#">Nav 3.4.4</a></li>
-                            <li><a href="#">Nav 3.4.5</a></li>
-                        </ul>-->
+
                     </li>
                     <li><a href="#">Nav 3.5</a></li>
                 </ul>
@@ -63,6 +52,10 @@
                     <option value="./img/carousel/img5.jpg">Image 5</option>
                     <option value="./img/carousel/img6.jpg">Image 6</option>
                 </select>
+            </div>
+            <div>
+                <label for="s-checkbox">Enable</label>
+                <input class="s-checkbox" id="s-checkbox" type="checkbox" value="yes">
             </div>
         </form>
     </div>
