--- a/goit/javascript/lesson_19-20/public/index.html
+++ b/goit/javascript/lesson_19-20/public/index.html
@@ -72,7 +72,32 @@
                 </div>
             </div>
 
+            <div class="center">
+                <section class="section section_setting">
+                    <h3 class="section__h3">Power Inside</h3>
+                    <p class="section__content">
+                        Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique
+                    </p>
+                    <a class="section__r-more" href="#" title="Read More">Read More</a>
+                </section>
 
+                <section class="section section_param">
+                    <h3 class="section__h3">New Technologies</h3>
+                    <p class="section__content">
+                        Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique
+                    </p>
+                    <a class="section__r-more" href="#" title="Read More">Read More</a>
+                </section>
+
+                <section class="section section_truck">
+                    <h3 class="section__h3">Fast Support</h3>
+                    <p class="section__content">
+                        Cum sociis natoque penatibus et magnis dis parturient montesmus. Pro vel nibh et elit mollis commodo et nec augueique
+                    </p>
+                    <a class="section__r-more" href="#" title="Read More">Read More</a>
+                </section>
+
+            </div>
 
             <div class="bg">
                <div class="service center">
