--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
         <li><a href="http://edubovic.github.io/goit/javascript/lesson_5-6/public/index.html">Lesson 5-6</a></li>
         <li><a href="http://edubovic.github.io/goit/javascript/lesson_7-8/public/index.html">Lesson 7-8</a></li>
         <li><a href="http://edubovic.github.io/goit/javascript/lesson_9-10/public/index.html">Lesson 9-10</a></li>
+        <li><a href="http://edubovic.github.io/goit/javascript/lesson_11-12/public/index.html">Lesson 11-12</a></li>
+        <li><a href="http://edubovic.github.io/goit/javascript/lesson_13-14/public/index.html">Lesson 13-14</a></li>
+        <li><a href="http://edubovic.github.io/goit/javascript/lesson_15-16/public/index.html">Lesson 15-16</a></li>
+        <li><a href="http://edubovic.github.io/goit/javascript/lesson_17-18/public/readme.md">Lesson 17-18</a></li>
+        <li><a href="http://edubovic.github.io/goit/javascript/lesson_19-20/public/index.html">Lesson 19-20</a></li>
+        <li><a href="http://edubovic.github.io/goit/javascript/lesson_19-20/public/lodash.html">Lesson 19-20 (lodash)</a></li>
+        <li><a href="http://edubovic.github.io/goit/javascript/lesson_21-22/public/index.html">Lesson 21-22</a></li>
+        <li><a href="http://edubovic.github.io/goit/javascript/lesson_23-24/public/index.html">Lesson 23-24</a></li>
     </ul>
 </body>
 </html>
